# back-2-school

./: README.md  pyproject.toml
back-2-school/: test_math-operations.py  train.py
back-2-school/conf/: config.yaml
back-2-school/conf/dataset/: iris.yaml
back-2-school/conf/model/: logistic_regression.yaml  random_forest.yaml
back-2-school/conf/outputs/2025-04-02/11-48-20/.hydra/: config.yaml  hydra.yaml
back-2-school/src/back_2_school/: data.csv  day_3_exercise.py  pandas_lessons.py  pydantic lesson.py
back-2-school/src/back_2_school/outputs/2025-04-01/19-44-41/.hydra/: hydra.yaml
