[project]
name = "back-2-school"
version = "0.1.0"
description = ""
authors = [
    {name = "Goerge Laskaris",email = "gla@terraquantum.swiss"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=1.21,<2.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "hydra-core (>=1.3.2,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "back_2_school", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
